# primer

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml
.github/workflows/: docker-image.yml
primer/: __main__.py
tests/: test_primer.py
